Bug 45378: Fix watchlist star jump
Negative margins are bad mkay.

--- a/less/modules/mf-watchstar.less
+++ b/less/modules/mf-watchstar.less
@@ -28,10 +28,12 @@ a.watch-this-article {
 
 li a.watch-this-article {
 	right: @contentMarginRight;
-	top: 50%;
-	height: @searchResultPaddingVertical * 2;
+	top: 0;
+	bottom: 0;
+	height: 100%;
 	width: @searchResultPaddingVertical * 2;
-	margin: -(@watchThisArticleSize / 2 + 1) 0 0;
+	background-position: center center;
+	margin: 0;
 }
 
 #mw-mf-menu-page {
